force-app/main/default/objects/Branch__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <defaultValue>$Label.kcs_dev__dx_api</defaultValue>
    <label>Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>