force-app/main/default/objects/Branch__c/fields/Formula2__c.field-meta.xml
<CustomField>
    <fullName>Formula2__c</fullName>
    <formula>IF(Branch2__r.Name !=Null , $Label.kcs_dev__dx_api +  $Label.kcs_dev__dx_api2 ,  Branch3__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula2</label>
    <type>Text</type>
</CustomField>