force-app/main/default/objects/Branch__c/fields/Formula3__c.field-meta.xml
<CustomField>
    <fullName>Formula3__c</fullName>
    <formula>TRIM(LEFT( Branch2__r.Name ,
5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula3</label>
    <type>Text</type>
</CustomField>