force-app/main/default/objects/Branch__c/fields/Formula4__c.field-meta.xml
<CustomField>
    <fullName>Formula4__c</fullName>
    <formula>Branch2__r.Name  +  TRIM(RIGHT(Branch3__r.Name ,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula4</label>
    <type>Text</type>
</CustomField>