force-app/main/default/objects/Branch__c/fields/ImageFormula__c.field-meta.xml
<CustomField>
    <fullName>ImageFormula__c</fullName>
    <formula>IMAGE("/sfc/servlet.shepherd/version/download/06828000007fAGiAAM", &#39;image alternate text&#39;,240,320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImageFormula</label>
    <type>Text</type>
</CustomField>