force-app/main/default/objects/Branch__c/fields/New_Dte__c.field-meta.xml
<CustomField>
    <fullName>New_Dte__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>New Dte</label>
    <type>DateTime</type>
</CustomField>