force-app/main/default/objects/Branch__c/fields/New_Num__c.field-meta.xml
<CustomField>
    <fullName>New_Num__c</fullName>
    <label>New Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>