force-app/main/default/objects/Branch__c/fields/New_text__c.field-meta.xml
<CustomField>
    <fullName>New_text__c</fullName>
    <defaultValue>($Label.kcs_dev__dx_api ) &amp;  ($Label.kcs_dev__dx_api2 )</defaultValue>
    <label>New text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>