force-app/main/default/objects/Branch__c/fields/new_url__c.field-meta.xml
<CustomField>
    <fullName>new_url__c</fullName>
    <defaultValue>$Organization.GoogleAppsDomain</defaultValue>
    <label>new url</label>
    <type>Url</type>
</CustomField>