force-app/main/default/objects/Branch__c/fields/NewFormula1__c.field-meta.xml
<CustomField>
    <fullName>NewFormula1__c</fullName>
    <formula>IF( Branch2__r.Salary__c &gt;= 10000, (Currency__c * 10) / 100, (Currency__c *5) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewFormula1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>