force-app/main/default/objects/Branch__c/fields/photos__c.field-meta.xml
<CustomField>
    <fullName>photos__c</fullName>
    <label>photos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>