force-app/main/default/objects/Branch__c/fields/vsv__c.field-meta.xml
<CustomField>
    <fullName>vsv__c</fullName>
    <formula>$Label.kcs_dev__dx_api  +  $Label.kcs_dev__dx_api2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>vsv</label>
    <type>Text</type>
</CustomField>