force-app/main/default/objects/Branch__c/validationRules/New_VAlidta.validationRule-meta.xml
<ValidationRule>
    <fullName>New_VAlidta</fullName>
    <active>false</active>
    <errorConditionFormula>Branch1__r.Branch2__c  &lt;&gt; Null</errorConditionFormula>
    <errorMessage>NEW ERROR</errorMessage>
</ValidationRule>