force-app/main/default/objects/Branch__c/validationRules/NewValid.validationRule-meta.xml
<ValidationRule>
    <fullName>NewValid</fullName>
    <active>false</active>
    <errorConditionFormula>$Label.kcs_dev__dx_api !=Null</errorConditionFormula>
    <errorDisplayField>New_Dte__c</errorDisplayField>
    <errorMessage>New Error</errorMessage>
</ValidationRule>