force-app/main/default/objects/Branch__c/validationRules/NextValid.validationRule-meta.xml
<ValidationRule>
    <fullName>NextValid</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Branch2__c)</errorConditionFormula>
    <errorMessage>nulll</errorMessage>
</ValidationRule>